[package]
name = "edgefirst-fusion"
description = "EdgeFirst Fusion"
repository = "https://github.com/EdgeFirstAI/fusion"
license = "Apache-2.0"
version = "1.5.0"
edition = "2021"
rust-version = "1.82"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[features]
default = ["tracy"]
deepviewrt = ["dep:deepviewrt"]
tracy = ["tracing-tracy/enable", "tracy-client/enable"]
profiling = [
    "tracing-tracy/sampling",
    "tracing-tracy/system-tracing",
    "tracy-client/sampling",
    "tracy-client/system-tracing",
]

[dependencies]
async-pidfd = "0.1.5"
clap = { version = "4.5.48", features = ["derive", "env"] }
deepviewrt = { version = "0.7.3", optional = true }
dma-buf = "0.4.0"
dma-heap = "0.4.1"
edgefirst-schemas = "1.5.3"
four-char-code = "2.3"
g2d-sys = "1.2.0"
itertools = "0.14.0"
lapjv = "0.3.0"
libc = "0.2.176"
log = { version = "0.4.28", features = ["release_max_level_info"] }
nalgebra = "0.34.1"
ndarray = { version = "0.16.1", features = ["rayon"] }
pidfd_getfd = "0.2.2"
serde_json = "1.0.145"
tflitec-sys = { path = "./tflitec-sys" }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "time",
    "io-std",
    "tracing",
] }
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"
tracing-tracy = { version = "0.11.4", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
tracy-client = { version = "0.18.2", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
uuid = { version = "1.18.1", features = ["v4"] }
zenoh = "1.7.2"
zstd = { version = "0.13.3", features = ["experimental"] }
