[package]
name = "tflitec-sys"
description = "Low-level FFI bindings for the TensorflowLite C API Library"
license = "Apache-2.0"
homepage = "https://github.com/EdgeFirstAI/fusion"
repository = "https://github.com/EdgeFirstAI/fusion"
keywords = ["tflite", "tensorflow-lite", "edgefirst", "inference"]
categories = ["external-ffi-bindings"]
version = "1.0.0"
edition = "2021"

[dependencies]
libloading = "0.8.6"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
log = "0.4.20"
